syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.protocol.protocols.agentprovisioning.v_0_6;

message RequesterPartiSet {
    option (scalapb.message).extends = "AgentProvisioningEvt";
    string id = 1;
}

message ProvisionerPartiSet {
    option (scalapb.message).extends = "AgentProvisioningEvt";
    string id = 1;
}

message AgentPairwiseKeyCreated {
    option (scalapb.message).extends = "AgentProvisioningEvt";
    string pairwiseDID = 1;
    string pairwiseVerKey = 2;
}

message UserAgentCreated {
    option (scalapb.message).extends = "AgentProvisioningEvt";
}